<resources>
    <string name="app_name">task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name_tedit">First Name</string>
    <string name="last_name_tedit">Last Name</string>
    <string name="age_tedit">Age</string>
    <string name="add_btn">Add</string>
    <string name="update">Update</string>
</resources>